# lecture_core

./: .gitmodules  Cargo.toml  build.sh  readme.md
crates/lecture-assembler/: Cargo.toml
crates/lecture-assembler/src/: lib.rs
crates/md-core/: Cargo.toml
crates/md-core/src/: lib.rs
crates/step-renderer/: Cargo.toml
crates/step-renderer/src/: lib.rs
crates/tauri-commands/: Cargo.toml
crates/tauri-commands/src/: lib.rs
